root/apps/web/qdocs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qdocs-ingress
  namespace: web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [ "qdocs.preprod.qoffice.cloud" ]
      secretName: qdocs-tls
  rules:
    - host: qdocs.preprod.qoffice.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: qdocs, port: { number: 80 } } }
